--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,13 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
+
+hr {
+  margin: 1.5rem 0rem;
+  border: 1px solid var(--primary-color);
+  padding: 0.1rem 0.1rem;
+}
+
 .container {
   padding: 0.5rem 1rem;
 }
@@ -18,6 +25,7 @@ body {
 }
 
 .link {
+  font-size: 20px;
   text-decoration: none;
   padding: 0.5rem 1rem;
 }
@@ -34,3 +42,11 @@ body {
   border: 1px solid var(--primary-color);
 }
 
+.link-non-bullets {
+  list-style: none;
+}
+
+.list-item-inline {
+  display: inline;
+  padding: 0rem 1rem;
+}
