--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,65 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 
 :root {
-  --primary-color: #7C3AED;
+  /* --primary-color: #1E40AF; */
+  --primary-color: #5B21B6;
 }
 
 body {
   font-family: 'Montserrat', sans-serif;
 }
 
+.content {
+  border: 0.1px solid var(--primary-color);
+  margin: auto;
+  border-radius: 0.5rem;
+  /* min-height: 700px; */
+  /* position: relative; */
+  max-width: 900px;
+}
+
+.header {
+  background-color: var(--primary-color);
+  padding: 1rem;
+  border-radius: 0.5rem;
+  
+}
+
+.header-title {
+  text-align: center; 
+  font-size: xx-large;
+  color: antiquewhite;
+  font-weight: bold;
+}
+
+
 
 hr {
-  margin: 1.5rem 0rem;
+  margin: 1.5rem 0.5rem;
   border: 1px solid var(--primary-color);
-  padding: 0.1rem 0.1rem;
+  padding: 0.01rem 0.01rem;
 }
+
+p {
+  padding: 0.2rem 1rem;
+}
+
+h1 {
+  padding: 0rem 1rem;
+}
+
+h2 {
+  padding: 0rem 1rem;
+}
+
+h3 {
+  padding: 0rem 1rem;
+}
+
+small {
+  padding: 0rem 1rem ;
+}
+
 
 .container {
   padding: 0.5rem 1rem;
@@ -28,6 +74,7 @@ hr {
   font-size: 20px;
   text-decoration: none;
   padding: 0.5rem 1rem;
+  margin: 0rem 1rem;
 }
 
 .link-primary {
@@ -49,4 +96,23 @@ hr {
 .list-item-inline {
   display: inline;
   padding: 0rem 1rem;
+}
+
+.header .link {
+  color: #FBBF24;
+  text-align: centre;
+  padding: 1rem 0.1rem;
+  font-size: 1rem;
+  margin: 0rem 0.5rem;
+}
+
+.header-pills {
+  text-align: right;
+}
+
+.img {
+  max-width: 400px;
+  display: block;
+  margin: auto;
+  padding: 1rem;
 }
